<resources>
    <string name="app_name" translatable="false">Rain text</string>
    <string name="show_password">Show password</string>
    <string name="headline">Headline</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="item_deleted">Record deleted</string>
    <string name="close_button">Close</string>
    <string name="save_button">Save</string>
    <string name="password_requirements">Password requirements</string>
    <string name="password_requirements_length">Minimum 8 characters</string>
    <string name="password_requirements_majuscules">At least one capital letter</string>
    <string name="password_requirements_minus">At least one lowercase letter</string>
    <string name="password_requirements_numbers">At least one number</string>
    <string name="generate_button">Generate password</string>
    <string name="number_of_chars">Number of characters in the password</string>
    <string name="generate_include_specials">Include special characters</string>
    <string name="confirm">Confirm</string>
    <string name="delete_item">Delete record</string>
    <string name="warning">Warning</string>
    <string name="warning_delete_password">Do you really want to permanently delete this record?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="hide_password">Hide password</string>
    <string name="edit_item">Edit record</string>
    <string name="settings_description">Settings</string>
    <string name="time_in_clipboard">Time in clipboard</string>
    <string name="time_in_clipboard_tooltip">The length of time the copied data is stored in the clipboard</string>
    <string name="turn_off_time">Turn off time</string>
    <string name="turn_off_time_tooltip">Time for the app to shut down when in the background (requires logging in again)</string>
    <string name="add_item">Add record</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme</string>
    <string name="security">Security</string>
    <string name="password_copied">Password copied</string>
    <string name="username_copied">Username copied</string>
    <string name="item">Record</string>
    <string name="was_deleted">was deleted.</string>
    <string name="app_shut_down">The application has been discontinued for security reasons.</string>
    <string name="debug_tool_connected">debugging tool connected</string>
    <string name="ok" translatable="false">ok</string>
    <string name="emulator_detected">It has been detected that the application is running on an emulator.</string>
    <string name="device_rooted">the device is rooted</string>
    <string name="decrypting">Decripting: %1$d%%</string>
</resources>