<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical"
    android:padding="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/headlineInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/headline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/headlineInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconContentDescription="@string/show_password"
        app:endIconDrawable="@drawable/ic_show_password"
        app:endIconMode="password_toggle"
        app:endIconTint="?android:attr/textColorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/passwordProgressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <ProgressBar
            android:id="@+id/passwordProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:max="100"
            android:progressDrawable="@drawable/progress_bar_drawable" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordRequirementsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/passwordRequirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_requirements"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/passwordRequirementsSeparator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/passwordRequirementsLengthWrong"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_wrong" />
                <ImageView
                    android:id="@+id/passwordRequirementsLengthOK"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_ok"
                    android:visibility="gone"/>

                <Space
                    android:layout_width="7sp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/passwordRequirementsLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_requirements_length"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/passwordRequirementsMajusculesWrong"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_wrong" />
                <ImageView
                    android:id="@+id/passwordRequirementsMajusculesOK"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_ok"
                    android:visibility="gone"/>

                <Space
                    android:layout_width="7sp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/passwordRequirementsMajuscules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_requirements_majuscules"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/passwordRequirementsMinusWrong"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_wrong" />

                <ImageView
                    android:id="@+id/passwordRequirementsMinusOK"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_ok"
                    android:visibility="gone"/>

                <Space
                    android:layout_width="7sp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/passwordRequirementsMinus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_requirements_minus"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/passwordRequirementsNumbersWrong"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_wrong" />

                <ImageView
                    android:id="@+id/passwordRequirementsNumbersOK"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_ok"
                    android:visibility="gone"/>

                <Space
                    android:layout_width="7sp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/passwordRequirementsNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_requirements_numbers"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <Space
        android:id="@+id/passwordProgressBarSpace"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generateButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/generate_button" />

    <LinearLayout
        android:id="@+id/passwordGenerateOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/NumberOfChars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_chars"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/generatePasswordNumberCharsSeekBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="64"
                android:progress="16" />

            <EditText
                android:id="@+id/generatePasswordNumberCharsEditText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="16"
                android:inputType="number"
                android:maxEms="64"
                android:minEms="8"
                android:autofillHints="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

            <CheckBox
                android:id="@+id/generateIncludeSpecials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generate_include_specials" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmGeneratePasswordButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/confirm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close_button" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/save_button" />

    </LinearLayout>

</LinearLayout>