<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/settings_rounded_corners_fragment"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/settings_description"
            android:textSize="16sp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_settings" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Settings_background_shadow" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/table_divider"
            android:showDividers="middle">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_in_clipboard"
                    android:tooltipText="@string/time_in_clipboard_tooltip" />

                <Spinner
                    android:id="@+id/clipboardTime"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/turn_off_time"
                    android:tooltipText="@string/turn_off_time_tooltip" />

                <Spinner
                    android:id="@+id/turnOffTime"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
